infrastructure/argocd-config/argocd-contour.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: "100.96.0.6,100.96.0.1,100.96.0.8,100.96.0.10,100.96.0.6,100.96.0.16"
spec:
  virtualhost:
    fqdn: argocd.glauciolabs.work
    tls:
      secretName: argocd-cert-secret
  routes:
    # Route for gRPC (CLI usage)
    - conditions:
        - prefix: /
        - header:
            name: Content-Type
            contains: application/grpc
      services:
        - name: argocd-server
          port: 80
          protocol: h2c
      timeoutPolicy:
        response: 1h
        idle: 600s
        idleConnection: 600s

    # Route for Web UI
    - conditions:
        - prefix: /
      services:
        - name: argocd-server
          port: 80
