infrastructure/argocd-config/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argocd.glauciolabs.work
    secretName: argocd-server-tls
  rules:
  - host: argocd.glauciolabs.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
